# SHAPE

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.ps1  build_linux.sh  install_ubuntu.sh  main.cpp  requirements.txt  run_from_source.ps1  setup.py  shape.cpp  shape.h  shape.qrc  shape.spec  shape.ui
SHAPE_binary_MACOSX/shape.app/Contents/: Info.plist
app/: shape.ui  shape_app.py  shape_original.ui
bindings/: shp_core.cpp
core/: shape_tools.h  tri_tri_intersect_moeller.h  trifaces.h  utility.h
data/test_shapes/General_created/: Demo_curvature_accuracy.shp3  Mouth_anus.shp3  hmm.shp3  rod_thin.shp3  six_spike.shp3  six_spike_02.shp3  sphere_default.shp3
data/test_shapes/RBC_and_Vesicles/: elliptocyte_01.shp3
scripts/: fetch_eigen.sh  smoke_gui.py
